[project]
name = "claude-sessions"
version = "0.1.0"
description = "SQLite-backed CLI for indexing, searching, tagging, and managing Claude Code conversation sessions"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Celestial Tech", email = "polikashin@celestialtech.io" },
]
dependencies = []

[project.optional-dependencies]
parquet = ["pyarrow"]
semantic = ["chromadb"]

[project.scripts]
claude-sessions = "claude_sessions.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_sessions"]
